# Mindspace

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
config/: .env.example  gpt-sovits-voices.json
desktop/: announcement-policy.cjs  announcement-policy.test.cjs  app-paths.cjs  app-paths.test.cjs  bootstrap-core.cjs  bootstrap-core.test.cjs  component-manager.cjs  component-manager.test.cjs  dashboard-policy.test.cjs  gpt-sovits-catalog.cjs  index.html  installer-policy.test.cjs  launcher-updater.cjs  launcher-updater.test.cjs  main.cjs  package-lock.json  package.json  preload.cjs  prepare-bootstrap.cjs  private-core-smoke.cjs  runtime-manager.cjs  runtime-manager.test.cjs  runtime-smoke.cjs  service-policy.cjs  service-policy.test.cjs  storage-location.cjs  storage-location.test.cjs  update-e2e.cjs  update-manager.cjs  update-manager.test.cjs  vite.config.ts
docs/: APPLICATION_ALGORITHM_FOUNDATION.md  APPLICATION_FULL_CHAIN.md  ARCHITECTURE.md  ASR_FINAL_REFINEMENT.md  CODE_READING_GUIDE.md  DEVELOPER_MEMORY_RAG_PROMPT.md  EMOTION_INTERFACE.md  ENGINEER_HANDBOOK.md  FRONTEND_REFERENCES.md  GENDER_IDENTITY.md  GPT-SOVITS-VOICE-CATALOG.md  IMPLEMENTATION_PLAN.md  LLM_JSON_ORCHESTRATION.md  MATURITY_HARDENING.md  ONLINE_UPDATE_RELEASE.md  PACKAGING.md  PRODUCT_ARCHITECTURE.md  PRODUCT_INTRODUCTION.md  READ_ONLY_CAPABILITIES.md  RUNTIME_RUNBOOK.md  UPDATE_AND_CAPACITY.md  VERIFICATION.md  VOICE_INTERACTION_MODES.md  ZERO_ENVIRONMENT_RUNTIME.md  release-history.json  (+1 more)
(+146 files in other folders)
