[project]
name = "mindspace-langgraph"
version = "0.5.8"
description = "Service-oriented LangGraph product shell for Mindspace chat, RAG, TTS, and ASR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langgraph>=1.0,<2",
  "pydantic>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "typing-extensions>=4.12",
  "uvicorn>=0.34,<1",
  "websockets>=15,<17",
]

[project.optional-dependencies]
dev = [
    "numpy>=1.26,<3",
    "paramiko>=3.5,<4",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]
embeddings = [
  "sentence-transformers>=5.1,<6",
  "optimum[onnxruntime]>=2,<3",
]
asr = [
  "funasr>=1.3.15,<2",
  "huggingface-hub>=0.34,<2",
  "modelscope>=1.29,<2",
  "soundfile>=0.13,<1",
  "tiktoken>=0.9,<1",
]

[project.scripts]
mindspace-graph = "mindspace_graph.cli:main"
mindspace-server = "mindspace_graph.server:main"
mindspace-asr-worker = "mindspace_graph.asr_worker:main"
mindspace-admin = "mindspace_graph.admin_cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindspace_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
